# screenshot-concept

./: .gitignore  meson.build  org.gnome.Kasbah.json
data/: kasbah.gresource.xml  meson.build  org.gnome.Kasbah.appdata.xml.in  org.gnome.Kasbah.desktop.in  org.gnome.Kasbah.gschema.xml  org.gnome.Kasbah.service.in  save.ui  window.ui
po/: POTFILES  en_GB.po  meson.build
src/: capture.ui  kasbah.gresource.xml  kasbah.in  main.py  menus.ui  meson.build  save.py  save.ui  service.py  window.py  window.ui
